# Lemur

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/deploy/: tgi_lemur.sh  vllm_lemur.sh
scripts/eval/: bbh.sh  gsm.sh  humaneval.sh  mbpp.sh  mmlu.sh
xchat/eval/: dispatch_openai_requests.py  utils.py
xchat/eval/bbh/: run_eval.py
xchat/eval/gsm/: examplars.py  run_eval.py
xchat/eval/humaneval/: prompts.py  run_eval.py
xchat/eval/mbpp/: data.py  evaluation.py  examplars.py  execution.py  prompts.py  run_eval.py
xchat/eval/mmlu/: run_eval.py
xchat/train/: llama_flash_attn_monkey_patch.py  train.py
